app/assets/stylesheets/styles.css
h1 {
  text-align: center;
}

#canvas {
  border: 1px solid black;
}

#canvas-div {
  width: 600px;
  height: 400px;
  margin: auto;
  position: relative;
}

#save-canvas {
  display: inline;
/*  margin: auto;*/
  padding: 5px;
  float: right;
}

.img-thumbnail {
  width: 150px;
  height: 100px;
  display: inline;
  margin: 10px;
  position: relative;
}

.image-thumbnails-list {
  width: 95%;
  display: block;
/*  margin: 2px;*/
  margin: auto;
}

#show-image-container {
  width: 600px;
  margin: auto;
}

img {
  border: 1px solid black;
  margin: auto;
  position: relative;
  display: block;
}

#fav {
  width: 30px;
  height: 30px;
  background-image: url('invis_center_heart_icon.png');
  background-size: 100%;
  background-color: white;
  border: none;
  float: right;
}

#fav:hover {
  cursor: hand;
  cursor: pointer;
}

/*#fav p {
  display: none;
}

#fav:hover p {
  display: block;
}*/

#unfav {
  width: 30px;
  height: 30px;
  background-image: url('invis_center_heart_icon.png');
  background-size: 100%;
  background-color: red;
  border: none;
  float: right;
}

#unfav:hover {
  cursor: hand;
  cursor: pointer;
}
/*
#unfav p {
  display: none;
}

#unfav:hover p {
  display: block;
}*/

.artist-names, .contributor-names {
  font-size: 12px;
/*  float: left;*/
}



#navbar {
  height: 20px;
/*  background-color: #333344;*/
}

#navbar a {
/*  float: right;*/
  padding: 5px;
}

#body-container {
  margin-top: 70px;
}

.delete-icon {
  margin-top: 4px;
  width: 25px;
  height: 25px;
  float: right;
  border: none;
}

